{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 29,
  "lineage": "cbc81daa-1c70-03f2-a2df-fe1cc797ecba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pci_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741448932704:internet-gateway/igw-0802c6e75681c91ba",
            "id": "igw-0802c6e75681c91ba",
            "owner_id": "741448932704",
            "tags": {
              "Name": "pci-igw"
            },
            "tags_all": {
              "Name": "pci-igw"
            },
            "vpc_id": "vpc-09dbe40947ce34f42"
          },
          "dependencies": [
            "aws_vpc.pci_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "pci_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:741448932704:loadbalancer/app/pci-alb/48fc49a39fd25819",
            "arn_suffix": "app/pci-alb/48fc49a39fd25819",
            "desync_mitigation_mode": "defensive",
            "dns_name": "pci-alb-1083937571.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:741448932704:loadbalancer/app/pci-alb/48fc49a39fd25819",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pci-alb",
            "security_groups": [
              "sg-02bc52123ccd33318"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0156ac6837eec1a78"
              },
              {
                "subnet_id": "subnet-0d7e6baa091ca1483"
              }
            ],
            "subnets": [
              "subnet-0156ac6837eec1a78",
              "subnet-0d7e6baa091ca1483"
            ],
            "tags": {
              "Environment": "PCI",
              "Name": "pci-alb"
            },
            "tags_all": {
              "Environment": "PCI",
              "Name": "pci-alb"
            },
            "vpc_id": "vpc-09dbe40947ce34f42",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.pci_alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.pci_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:741448932704:listener/app/pci-alb/48fc49a39fd25819/f20b3a3360a765b8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "This is a test message",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:741448932704:listener/app/pci-alb/48fc49a39fd25819/f20b3a3360a765b8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:741448932704:loadbalancer/app/pci-alb/48fc49a39fd25819",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.pci_alb",
            "aws_security_group.pci_alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.pci_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pci_lambda_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:741448932704:targetgroup/pci-lambda-tg/bb35f2d11eb4d438",
            "arn_suffix": "targetgroup/pci-lambda-tg/bb35f2d11eb4d438",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": false,
                "healthy_threshold": 5,
                "interval": 35,
                "matcher": "200",
                "path": "/",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:741448932704:targetgroup/pci-lambda-tg/bb35f2d11eb4d438",
            "lambda_multi_value_headers_enabled": false,
            "name": "pci-lambda-tg",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
              }
            ],
            "tags": {
              "Environment": "PCI"
            },
            "tags_all": {
              "Environment": "PCI"
            },
            "target_type": "lambda",
            "vpc_id": "vpc-09dbe40947ce34f42"
          },
          "dependencies": [
            "aws_vpc.pci_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lambda_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:741448932704:targetgroup/pci-lambda-tg/bb35f2d11eb4d438-20241129132520704500000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:741448932704:targetgroup/pci-lambda-tg/bb35f2d11eb4d438",
            "target_id": "arn:aws:lambda:eu-west-1:741448932704:function:TestLambda"
          },
          "dependencies": [
            "aws_iam_role.lambda_execution_role",
            "aws_lambda_function.test_lambda",
            "aws_lb_target_group.pci_lambda_tg",
            "aws_security_group.pci_alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.pci_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pci_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741448932704:security-group/sg-02bc52123ccd33318",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bc52123ccd33318",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pci-alb-sg20241129125021451600000002",
            "name_prefix": "pci-alb-sg",
            "owner_id": "741448932704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pci-alb-security-group"
            },
            "tags_all": {
              "Name": "pci-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dbe40947ce34f42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pci_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741448932704:subnet/subnet-0156ac6837eec1a78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0156ac6837eec1a78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448932704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pci-public-subnet-1"
            },
            "tags_all": {
              "Name": "pci-public-subnet-1"
            },
            "vpc_id": "vpc-09dbe40947ce34f42"
          },
          "dependencies": [
            "aws_vpc.pci_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741448932704:subnet/subnet-0d7e6baa091ca1483",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7e6baa091ca1483",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448932704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pci-public-subnet-2"
            },
            "tags_all": {
              "Name": "pci-public-subnet-2"
            },
            "vpc_id": "vpc-09dbe40947ce34f42"
          },
          "dependencies": [
            "aws_vpc.pci_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pci_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741448932704:vpc/vpc-09dbe40947ce34f42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06219d2fe84f58555",
            "default_route_table_id": "rtb-0a44e13d673bb934c",
            "default_security_group_id": "sg-0b7774cc0a5e94125",
            "dhcp_options_id": "dopt-06d7c4466cbf8f77b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09dbe40947ce34f42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a44e13d673bb934c",
            "owner_id": "741448932704",
            "tags": {
              "Name": "pci-vpc"
            },
            "tags_all": {
              "Name": "pci-vpc"
            }
          }
        }
      ]
    }
  ]
}